--- a/index86v3.html
+++ b/index86v3.html
@@ -9,9 +9,9 @@
 
   <script>
     $(document).ready(function () {
-    $('window').resize(function () { 
-      $("['href']").hide(); 
-    });
+      $(window).resize(function () {
+        $('[href]').hide();
+      });
     });
   </script>
 </head>
